--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,6 @@ jobs:
       uses: ApolloZhu/hexo-deploy-action@master
       env:
         PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
-        PUBLISH_REPOSITORY: dev4mobile/dev4mobile.github.io # The repository the action should deploy to.
+        PUBLISH_REPOSITORY: Thomitics/Blog # The repository the action should deploy to.
         BRANCH: master # The branch the action should deploy to.
         PUBLISH_DIR: ./public # The folder the action should deploy.
