--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,5 +13,5 @@ jobs:
       env:
         PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
         PUBLISH_REPOSITORY: Thomitics/Blog # The repository the action should deploy to.
-        BRANCH: master # The branch the action should deploy to.
+        BRANCH: gh-pages # The branch the action should deploy to.
         PUBLISH_DIR: ./public # The folder the action should deploy.
