--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,59 @@
-name: Build and Deploy
-on: [push]
+# 当有改动推送到master分支时，启动Action
+name: 自动部署
+
+on:
+  push:
+    branches:
+      - master #2020年10月后github新建仓库默认分支改为main，注意更改
+
+  release:
+    types:
+      - published
+
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1.1.0
+    - name: 检查分支
+      uses: actions/checkout@v2
       with:
-        submodules: recursive
-    - name: Build and Deploy
-      uses: ApolloZhu/hexo-deploy-action@master
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
-        PUBLISH_REPOSITORY: Thomitics/Blog # The repository the action should deploy to.
-        BRANCH: gh-pages # The branch the action should deploy to.
-        PUBLISH_DIR: ./public # The folder the action should deploy.
+        ref: master #2020年10月后github新建仓库默认分支改为main，注意更改
+
+    - name: 安装 Node
+      uses: actions/setup-node@v1
+      with:
+        node-version: "12.x"
+
+    - name: 安装 Hexo
+      run: |
+        export TZ='Asia/Shanghai'
+        npm install hexo@latest -g
+        npm install gulp@latest -g
+
+    - name: 缓存 Hexo
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: node_modules
+        key: ${{runner.OS}}-${{hashFiles('**/package-lock.json')}}
+
+    - name: 安装依赖
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        npm install --save
+
+    - name: 生成静态文件
+      run: |
+        hexo clean
+        hexo generate
+        gulp
+
+    - name: 部署
+      run: |
+        git config --global user.name "Thomitics"
+        git config --global user.email "i@foxex.cn"
+        git clone https://github.com/Thomitics/Blog.git .deploy_git
+        # 此处务必用HTTPS链接。SSH链接可能有权限报错的隐患
+        # =====注意.deploy_git前面有个空格=====
+        # 这行指令的目的是clone博客静态文件仓库，防止Hexo推送时覆盖整个静态文件仓库，而是只推送有更改的文件
+        hexo deploy
