--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -369,7 +369,7 @@ facebook_comments:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId: likitalk-8g0a95hwd62b635f
+  envId: twikoo-5gnpelbm2388569d
   region:
   option:
 
