--- a/_config.yml
+++ b/_config.yml
@@ -62,10 +62,9 @@ time_format: 'HH:mm:ss'
 updated_option: mtime
 per_page: 10
 pagination_dir: page
-# 自动生成sitemap
-sitemap:
+sitemap: null
 path: /sitemap.xml
-baidusitemap:
+baidusitemap: null
 path: /baidusitemap.xml
 include: null
 exclude: null
