--- a/_config.yml
+++ b/_config.yml
@@ -62,10 +62,10 @@ time_format: 'HH:mm:ss'
 updated_option: mtime
 per_page: 10
 pagination_dir: page
-sitemap: null
-path: /sitemap.xml
-baidusitemap: null
-path: /baidusitemap.xml
+sitemap:
+path: sitemap.xml
+baidusitemap:
+path: baidusitemap.xml
 include: null
 exclude: null
 ignore: null
