--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -434,7 +434,7 @@ baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
-google_analytics:
+google_analytics: G-EFRKKVE2KE
 
 # Tencent Analytics ID
 # https://mta.qq.com
