--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -673,7 +673,7 @@ aside:
       link: https://github.com/thomitics
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: This is my Blog.一个处境卑微的退役OIer，现在在读高三
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
