--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -96,11 +96,11 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/avatar.jpg
+favicon: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/avatar.jpg
 
 # Avatar (頭像)
 avatar:
-  img: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/avatar.jpg
+  img: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/avatar.jpg
   effect: false
 
 # Disable all banner image
@@ -110,7 +110,7 @@ disable_top_img: false
 index_img: https://i0.hdslb.com/bfs/album/d66747302a68fa984ed9551c3664761508bc3657.png
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/b2bg.jpg
+default_top_img: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/b2bg.jpg
 
 # The banner image of archive page
 archive_img: https://api.r10086.com/%E6%98%8E%E6%97%A5%E6%96%B9%E8%88%9F2.php
@@ -122,7 +122,7 @@ tag_img: https://api.r10086.com/%E9%A3%8E%E6%99%AF%E7%B3%BB%E5%88%977.php
 # The banner image of tag page
 # format:
 #  - tag name: xxxxx
-tag_per_img: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/bg565.jpg
+tag_per_img: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/bg565.jpg
 
 # If the banner of category page not setting, it will show the top_img
 # note: category page, not categories page (子分類頁面的 top_img)
@@ -131,7 +131,7 @@ category_img: https://api.r10086.com/%E9%A3%8E%E6%99%AF%E7%B3%BB%E5%88%972.php
 # The banner image of category page
 # format:
 #  - category name: xxxxx
-category_per_img: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/bg565.jpg
+category_per_img: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/bg565.jpg
 
 
 cover:
@@ -148,14 +148,14 @@ cover:
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
-  flink: https://cdn.jsdelivr.net/gh/thomitics/blog/img/friend_404.gif
-  post_page: https://cdn.jsdelivr.net/gh/Thomitics/PicBed@master/pics/40404.jpg
+  flink: https://gcore.jsdelivr.net/gh/thomitics/blog/img/friend_404.gif
+  post_page: https://gcore.jsdelivr.net/gh/Thomitics/PicBed@master/pics/40404.jpg
 
 # A simple 404 page
 error_404:
   enable: true
   subtitle: 'Page Not Found'
-  background: https://cdn.jsdelivr.net/gh/thomitics/picbed/pics/aKOcLiyPl2JQdFD.png
+  background: https://gcore.jsdelivr.net/gh/thomitics/picbed/pics/aKOcLiyPl2JQdFD.png
 
 post_meta:
   page: # Home Page
@@ -422,7 +422,7 @@ footer:
   owner:
     enable: true
     since: 2020
-  custom_text: 本网站由<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src="https://cdn.jsdelivr.net/gh/thomitics/likiblaze.github.io/images/又拍云_logo6.png"></a>提供CDN/云储存服务
+  custom_text: 本网站由<a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src="https://gcore.jsdelivr.net/gh/thomitics/likiblaze.github.io/images/又拍云_logo6.png"></a>提供CDN/云储存服务
   copyright: true # Copyright of theme and framework
 
 # Analysis
@@ -843,7 +843,7 @@ pangu:
 # https://github.com/verlok/lazyload
 lazyload:
   enable: true
-  post: https://cdn.jsdelivr.net/gh/Thomitics/PicBed@master/pics/cqtcqurqqx.gif
+  post: https://gcore.jsdelivr.net/gh/Thomitics/PicBed@master/pics/cqtcqurqqx.gif
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
