--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Thomitics
+title: Shirakami Ling
 subtitle: Welcome!!!
 description: Nothing Last Forever.
 keywords: null
-author: Thomitics
+author: Shirakami Ling
 language: zh-CN
 timezone: Asia/Shanghai
 search:
