--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -339,7 +339,7 @@ valine:
   enableQQ: true # enable the Nickname box to automatically get QQ Nickname and QQ Avatar
   requiredFields: nick # required fields (nick/mail)
   option:
-  visitor: true
+  visitor: false
 
 # waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
@@ -374,7 +374,7 @@ twikoo:
   envId: twikoo-9gkusr5330416ede
   region:
   option:
-  visitor: true
+  visitor: false
 
 # Chat Services
 # --------------------------------------
