--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -53,7 +53,7 @@ social:
   # fab fa-github: https://github.com/xxxxx || Github
   # fas fa-envelope: mailto:xxxxxx@gmail.com || Email
   fab fa-github: https://github.com/thomitics || Github
-  fas fa-envelope: mailto:likiblaze@foxmail.com || Email
+  fas fa-envelope: mailto:i@foxex.cn || Email
   fab fa-weibo: https://weibo.com/LikiBlaze/ || Weibo
   fab fa-twitter: https://twitter.com/BlazeLiki || Twitter
   #fab fa-microsoft:
